--- a/HomeWork9/package.json
+++ b/HomeWork9/package.json
@@ -2,14 +2,13 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^7.0.2",
     "@typescript-eslint/parser": "^7.0.2",
-    "eslint": "^8.56.0",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^8.57.0",
     "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.29.1",
-    "prettier": "^3.2.5"
-  },
-  "dependencies": {
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.1.3"
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-prettier": "^5.1.3",
+    "prettier": "3.2.5"
   },
   "name": "homework9",
   "version": "1.0.0",
